Huge commit, added necessary activities, port of hbc for android, spotify player interface and ability to search